# oh-my-claude

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PLUGIN-STRUCTURE.md  README.md  install.sh
.claude-plugin/: .lsp.json  marketplace.json  plugin.json
.openkanban/: tickets.json
agents/: context-summarizer.md  deep-explorer.md  librarian.md  parallel-implementer.md  scout.md  validator.md
commands/: commit.md  context.md  do.md  prime.md
demo/: README.md  setup-demo.sh  ultrawork-demo.tape
docs/: TASK-TOOLS-IMPLEMENTATION-PLAN.md  TASK-TOOLS-RESEARCH.md
hooks/: context-guardian.sh  context-preserver.sh  hooks.json  lsp-auto-config.sh  lsp-diagnostics.sh  todo-continuation-enforcer.sh  ultrawork-detector.sh
lsp/: c.lsp.json  dockerfile.lsp.json  go.lsp.json  java.lsp.json  lua.lsp.json  swift.lsp.json  typescript.lsp.json  yaml.lsp.json
scripts/: install-lsp.sh
tests/oh-my-claude/hooks/: __init__.py  conftest.py  pyproject.toml  test_agent_usage_reminder.py  test_claudemd_health.py  test_commit_quality_enforcer.py  test_context_guardian.py  test_context_monitor.py  test_context_protector.py  test_danger_blocker.py  test_delegation_enforcer.py  test_edit_error_recovery.py  test_hook_utils.py  test_notification_alert.py  test_openkanban_status.py  test_plan_approved.py  test_plan_execution_injector.py  test_precompact_context.py  test_safe_permissions.py  test_session_start.py  test_task_delegation_enforcer.py  test_tdd_enforcer.py  test_team_lifecycle_guardian.py  test_todo_enforcer.py  test_ultrawork_detector.py  test_verification_reminder.py
(+105 files in other folders)
